--- a/en_cours/frontend/home.html
+++ b/en_cours/frontend/home.html
@@ -15,7 +15,7 @@
                 <img src="assets/img/home.svg" alt="Home">
             </a>
 
-            <a href="#" class="nav-item">
+            <a href="scan.html" class="nav-item">
                 <img src="assets/img/scan.svg" alt="Scan">
             </a>
 
