--- a/sources/frontend/scan.html
+++ b/sources/frontend/scan.html
@@ -9,7 +9,7 @@
     <title>Trophées NSI - Projet V1</title>
 </head>
 <body>
-    <!-- Barre de navigation entre cette page-ci et deux nouvelles qui seront crées par la suite -->
+    <!-- Barre de navigation commune -->
     <div class="bottom-nav-wrapper">
       <nav class="liquid-glass bottom-nav">
         <a href="home.html" class="nav-item">
@@ -28,7 +28,8 @@
 
     <p>Bienvenue,</p>
     <span>Jules</span>
-   
+      
+    <!-- Widget qui récupère une image de champignon et l'affiche en dessous -->
     <section class="liquid-glass content scan-content">
       <h2>Scannez un champignon et découvrez s'il est comestible ou non</h2>
       <label class="file-button">Parcourir les fichiers<input type="file" id="file-input" accept="image/*"></label>
