--- a/sources/frontend/home.html
+++ b/sources/frontend/home.html
@@ -8,7 +8,7 @@
     <title>Trophées NSI - Projet V1</title>
 </head>
 <body>
-    <!-- Barre de navigation entre cette page-ci et deux nouvelles qui seront crées par la suite -->
+    <!-- Barre de navigation commune -->
     <div class="bottom-nav-wrapper">
         <nav class="liquid-glass bottom-nav">
             <a href="home.html" class="nav-item active">
