Voilà plus qu'a modifier le README et c'est bon

--- a/sources/frontend/scan.html
+++ b/sources/frontend/scan.html
@@ -31,13 +31,13 @@
       
     <!-- Widget qui récupère une image de champignon et l'affiche en dessous -->
     <section class="liquid-glass content scan-content">
-      <h2>Scannez un champignon et découvrez s'il est comestible ou non</h2>
+      <h2>Scannez un champignon et découvrez son nom</h2>
       <label class="file-button">Parcourir les fichiers<input type="file" id="file-input" accept="image/*"></label>
-      <p>ou glissez l'image directement ici.</p>
+      <!-- <p>ou glissez l'image directement ici.</p> -->
 
       <div id="preview-container" class="hidden">
         <img id="preview-image" alt="">
-        <button id="validate-btn">Valider</button>
+        <button id="validate-btn">...</button>
       </div>
     </section>
     
