rendu final prof

--- a/sources/frontend/scan.html
+++ b/sources/frontend/scan.html
@@ -37,7 +37,7 @@
 
       <div id="preview-container" class="hidden">
         <img id="preview-image" alt="">
-        <button id="validate-btn">...</button>
+        <p id="champi">Nom du champignon : <span id="nom-champi"></span></p>
       </div>
     </section>
     
